# drf-api-permissions-postgres

./: README.md  db.sqlite3  docker-compose.yml  pyproject.toml
api/: views.py
items/: admin.py
items/migrations/: 0001_initial.py
postgres-data/: postmaster.pid
postgres-data/base/1/: 1247  1247_vm  1249  1255_vm  1259  12902_vm  12907  12907_vm  12912  12922_vm  12936  2187  2579  2607_vm  2608  2608_vm  2610  2610_vm  2616_vm  2650  2651  2654  2659  2660  2662  2667  2675  2688  2692  2703  2753_vm  2755  2831  2838  2838_vm  2840  2840_vm  3079  3119  3164  (+17 more)
postgres-data/base/13066/: 1249_vm  1259  1259_vm  12916  12917_vm  12921  12922  12926  12927  2337  2600_vm  2601_vm  2605_vm  2606  2609  2609_vm  2612  2612_vm  2615  2617_vm  2618  2619  2619_vm  2656  2657  2658  2663  2664  2665  2666  2669  2670  2673  2674  2678  2679  2687  2690  2691  2693  (+19 more)
postgres-data/base/13067/: 1247  1247_vm  1249  1249_vm  1255  1259  1259_vm  12902  12906  12911  12912_vm  12917  12927_vm  16384  16386  16392  16393  16395  16397  16401  16403  16405  16407  16411  16413  16419  16423  16429  16431  16433  16437  16439  16441  16447  16449  16455  16457  16464  16465  16466  (+102 more)
postgres-data/global/: 1137  1213_vm  1214  1214_vm  1232  1233  1260  1260_vm  1261  1261_vm  1262  1262_vm  2396  2396_vm  2397  2671  2672  2676  2677  2694  2695  2697  2698  2847  2965  2967  3593  4061  6001  6002  6114  6115  pg_control  pg_internal.init
postgres-data/pg_stat_tmp/: db_0.stat  db_13067.stat  global.stat
postgres-data/pg_subtrans/: 0000
supermarket/: settings.py  urls.py
